--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "build": "sh build_scripts/rebuild.sh"
   },
   "author": "Nick Nowak",
-  "license": "None"
+  "license": "None",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "expressjs": "^1.0.1"
+  }
 }
