--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sh build_scripts/rebuild.sh"
+    "build": "sh build_scripts/rebuild.sh",
+    "start": "node index.js"
   },
   "author": "Nick Nowak",
   "license": "None",
