Rename build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sh build_scripts/rebuild.sh",
+    "build": "sh build_scripts/rebuild_css.sh",
     "start": "node index.js"
   },
   "author": "Nick Nowak",
