add create_profile partial and modal dialog functionality

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sh build_scripts/rebuild_css.sh",
-    "start": "node index.js"
+    "start": "sh build_scripts/rebuild_css.sh && node index.js"
   },
   "author": "Nick Nowak",
   "license": "None",
