--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "sh build_scripts/rebuild_css.sh && node index.js"
+    "start": "docker-compose up > /dev/null & sh build_scripts/rebuild_css.sh && node index.js"
   },
   "author": "Nick Nowak",
   "license": "None",
